--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@slack/web-api": "^7.8.0",
     "@types/node": "^22.7.5",
     "gts": "^6.0.2",
     "tsup": "^8.3.6",
